bin/testsuite/tests/compiler/src/errors/compiler5640.swg
//#global testerror "Err0168"

#test
{
    let my_list = [1, 2, 3]
}
